--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@import "header";
-@import "home";
-@import "pattern";
-@import "reset";
-@import "grid";
+@import "header",
+@import "home",
+@import "pattern",
+@import "reset",
+@import "grid",
